<resources>
    <string name="app_name">集群通信</string>
    <string name="action_settings">设置</string>
    <string name="app_startIng">对讲启动中</string>
    <string name="app_initIng">初始化中</string>
    <string name="app_Permission_to_change">权限变化</string>
    <string name="login_welcome_easy">公网对讲</string>
    <string name="login_welcome_easy_idata">对讲机</string>
    <string name="login_welcome">欢迎使用%1$s系统</string>
    <string name="login_welcome_tts">欢迎使用公网对讲</string>
    <string name="login_welcome_idata">欢迎使用对讲APP</string>
    <string name="login_welcome_Telecom_4G">欢迎使用电信4G对讲机</string>
    <string name="user_agreement">我已阅读并同意用户协议</string>
    <string name="main_tab_poc">POC</string>
    <string name="main_tab_poc_temp">对讲</string>
    <string name="main_tab_report">应用</string>
    <string name="main_tab_map">地图</string>
    <string name="main_tab_setting">设置</string>
    <string name="main_tab_operator">首页</string>
    <string name="main_tab_talkbackRecord">对讲记录</string>
    <string name="main_tab_chat">聊天</string>
    <string name="main_tab_grp">群组</string>
    <string name="main_tab_my">我</string>
    <string name="accessibility_service_description">智能安装，无障碍服务</string>
    <string name="search_hint_group">请输入关键字搜索群组</string>
    <string name="search_hint_group_member">请输入关键字搜索组内成员</string>
    <string name="search_hint_friend">请输入关键字搜索好友</string>
    <string name="search_hint_norm">请输入关键字搜索</string>
    <string name="search_hint_easy">请输入关键字</string>
    <string name="title_LoginActivity">登录</string>
    <string name="title_PocFragment">POC</string>
    <string name="title_GroupFragment">群组</string>
    <string name="title_FriendFragment">好友</string>
    <string name="title_DispatcherFragment">调度员</string>
    <string name="title_contactsFragment">通讯录</string>
    <string name="title_MyFragment">我</string>
    <string name="title_ABoutActivity">关于</string>
    <string name="title_ConnOffDialogActivity">异常登录</string>
    <string name="title_FeedbackActivity">意见反馈</string>
    <string name="title_SetLanguageActivity">语言设置</string>
    <string name="title_SetTextSizeActivity">字体设置</string>
    <string name="title_SetNetWorkActivity">网络模式</string>
    <string name="title_SetUpReportCycleActivity">定位设置</string>
    <string name="title_SetUpReportVideoSizeActivity">视频上报分辨率</string>
    <string name="title_videoConfig">视频配置</string>
    <string name="title_SetGPSReportCycleActivity">位置服务</string>
    <string name="title_SetLocationReportActivity">位置上报</string>
    <string name="title_SysSetActivity">设置</string>
    <string name="title_SetNormActivity">通用设置</string>
    <string name="title_PocMemberListActivity">群成员</string>
    <string name="title_ChatActivity">聊天</string>
    <string name="title_UpReportPhotoActivity">图片上报</string>
    <string name="title_UpreportVideoActivity">视频上报</string>
    <string name="title_UpReportVioceActivity">语音上报</string>
    <string name="title_PocGroupNoticeActivity">公告通知</string>
    <string name="title_requestDispatcher">调度请求</string>
    <string name="title_UserDescActivity">个人信息</string>
    <string name="title_SetSaveNoticeNumberActivity">公告保存设置</string>
    <string name="title_SelectMemberActivity">成员选择</string>
    <string name="title_TalkbackSoundActivity">临时呼叫</string>
    <string name="title_TempGrp">临时组</string>
    <string name="title_dispatchTempCall">调度呼叫</string>
    <string name="title_PlayRecordActivity">我的录音</string>
    <string name="title_RecordListActivity">我的录音</string>
    <string name="title_SearchConditionsActivity">搜索</string>
    <string name="title_TalkbackRecord">对讲记录</string>
    <string name="title_activity_maps">GoogleMap</string>
    <string name="title_UserAgreementAct">用户协议</string>
    <string name="title_setDomain">域名设置</string>
    <string name="title_PatrolRecordActivity">巡检列表</string>
    <string name="title_terminal_location">终端位置</string>
    <string name="title_attach_fun">快速应用</string>
    <string name="server">服务器</string>
    <string name="domain">域名</string>
    <string name="port">端口</string>
    <string name="other">其他</string>
    <string name="title_singlechip_autobackmain_timer">自动返回时间</string>
    <string name="title_poc_intercom">集群对讲</string>
    <string name="title_file_manager">文件回放</string>
    <string name="btn_close">关</string>
    <string name="btn_open">开</string>
    <string name="btn_affirm">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_submit">提交</string>
    <string name="btn_send">发送</string>
    <string name="btn_login">登录</string>
    <string name="btn_login_out">退出登录</string>
    <string name="btn_clean_data">清空账号</string>
    <string name="btn_ppt">PPT</string>
    <string name="btn_group_video_call">群视频呼叫</string>
    <string name="btn_hangup">挂断</string>
    <string name="btn_accept">接受</string>
    <string name="btn_refuse">拒绝</string>
    <string name="btn_speakerphone">免提</string>
    <string name="btn_silence">静音</string>
    <string name="btn_camera_change">切换</string>
    <string name="btn_upreport_source">原图</string>
    <string name="btn_upreport_compress">压缩</string>
    <string name="btn_source_nativce">本地</string>
    <string name="btn_source_photograph">拍照</string>
    <string name="btn_source_film">拍摄</string>
    <string name="btn_talk_photo">拍摄照片</string>
    <string name="btn_update_now">立即更新</string>
    <string name="btn_update_no">暂不更新</string>
    <string name="btn_upreport_location">位置上报</string>
    <string name="btn_upreport_photo">图片上报</string>
    <string name="btn_upreport_video">视频摄录</string>
    <string name="btn_upreport_voice">语音上报</string>
    <string name="btn_upreport_sos">一键报警</string>
    <string name="btn_upreport_Patrol">巡更记录</string>
    <string name="btn_upreport_scan">扫一扫</string>
    <string name="btn_remote_monitoring">远程监控</string>
    <string name="btn_record_log">语音记录</string>
    <string name="menu_apply_notice">通知</string>
    <string name="menu_apply_group">群组</string>
    <string name="menu_apply_friend">好友</string>
    <string name="menu_apply_member">成员</string>
    <string name="menu_apply_dispatch">调度员</string>
    <string name="menu_apply_groupSelect">群组选择</string>
    <string name="menu_apply_groupOpt">我的群组</string>
    <string name="menu_gid_input">请输入群组ID</string>
    <string name="menu_apply_friendSelect">好友选择</string>
    <string name="menu_apply_memberSelect">成员选择</string>
    <string name="menu_apply_dispatchSelect">调度员选择</string>
    <string name="menu_apply_location">位置</string>
    <string name="menu_apply_setting">设置</string>
    <string name="menu_apply_setting1">功能设置</string>
    <string name="menu_apply_upreport_photo">图片上报</string>
    <string name="menu_apply_upreport_video">视频上报</string>
    <string name="menu_apply_upreport_voice">语音上报</string>
    <string name="menu_apply_scan">扫一扫</string>
    <string name="menu_apply_patrol">巡检记录</string>
    <string name="menu_apply_sos_record">报警记录</string>
    <string name="menu_apply_train">铁鞋管理</string>
    <string name="menu_apply_sound">音柱</string>
    <string name="menu_apply_sos">一键报警</string>
    <string name="menu_apply_record_log">语音记录</string>
    <string name="menu_apply_voice_list">语音列表</string>
    <string name="menu_apply_terminal_location">终端位置</string>
    <string name="btn_call_voice">语音呼叫</string>
    <string name="btn_call_video">视频呼叫</string>
    <string name="btn_switch_camera">切换前后</string>
    <string name="btn_touch_video">按住拍</string>
    <string name="btn_fluency">流畅</string>
    <string name="btn_common">普清</string>
    <string name="btn_standard">标清</string>
    <string name="btn_high">高清</string>
    <string name="btn_press_speak">按住说话</string>
    <string name="btn_loosen_end">松开结束</string>
    <string name="btn_member">成员</string>
    <string name="btn_grplocation">群组定位</string>
    <string name="btn_terminal_location">终端定位</string>
    <string name="btn_navigation">导航</string>
    <string name="btn_onekey_navigation">一键导航</string>
    <string name="btn_navigation_start">开始导航</string>
    <string name="item_sysset_message_hint">消息提醒</string>
    <string name="item_sysset_VolumeControl">音量控制</string>
    <string name="item_sysset_VoiceEnhance">语音增强</string>
    <string name="item_sysset_TTSVolume">TTS音量</string>
    <string name="item_sysset_PlayEnhance">音量增强</string>
    <string name="item_sysset_RecordEnhance">录音增强</string>
    <string name="item_sysset_textsize">字体大小</string>
    <string name="item_sysset_network_mode">网络模式</string>
    <string name="item_sysset_language">语言设置</string>
    <string name="item_sysset_meeting">视频窗口</string>
    <string name="item_sysset_resolution">分辨率</string>
    <string name="item_sysset_priority_sharp">清晰</string>
    <string name="item_sysset_alarm_settings">报警设置</string>
    <string name="item_sysset_norm">通用设置</string>
    <string name="item_sysset_location">定位设置</string>
    <string name="item_sysset_locationinfo">定位信息</string>
    <string name="item_sysset_location_report">位置服务</string>
    <string name="item_sysset_upreport">位置上报周期</string>
    <string name="item_sysset_video_record_size">视频拍摄质量</string>
    <string name="item_sysset_notice_save_number">公告保存数量 %1$s 条</string>
    <string name="item_sysset_warning_tone_switch">提示音</string>
    <string name="item_sysset_notice_switch">公告通知</string>
    <string name="item_sysset_video_voice_double">视频语音双工</string>
    <string name="item_sysset_video_DispatchVideoShowUI">调度视频时显示页面</string>
    <string name="item_sysset_sos">SOS</string>
    <string name="item_sysset_codec">高清音质</string>
    <string name="item_sysset_station">基站</string>
    <string name="item_sysset_station_location">基站定位</string>
    <string name="item_sysset_gps">GPS过滤</string>
    <string name="item_sysset_gps_control">位置调度中</string>
    <string name="item_sysset_voice_type">语音播报</string>
    <string name="item_sysset_voice_OnLine_ispriority">TTS语音在线优先</string>
    <string name="item_sysset_video_config">视频配置</string>
    <string name="item_sysset_video_watermark">视频水印</string>
    <string name="item_sysset_watermark_size">水印大小</string>
    <string name="item_sysset_ptt_wake_up">对讲亮屏</string>
    <string name="item_power_mode">功耗模式</string>
    <string name="item_powerLowModel">待机模式</string>
    <string name="item_powerHeightModel">高性能模式</string>
    <string name="item_powerHeightModel1">性能模式</string>
    <string name="item_sysset_enable_agps">辅助定位</string>
    <string name="item_sysset_min_distance">最小上报距离</string>
    <string name="item_voiceAnnouncements">语音播报</string>
    <string name="item_video_collection_ratio">视频采集分辨率</string>
    <string name="item_video_auto_rcv_snd">自动收发视频</string>
    <string name="item_video_auto_rcv_snd_desc">视频立即接收或发送</string>
    <string name="item_upreport_no">不上报</string>
    <string name="item_upreport_high">高频率%1$s</string>
    <string name="item_upreport_middle">中频率%1$s</string>
    <string name="item_upreport_low">低频率%1$s</string>
    <string name="item_account">账户</string>
    <string name="item_Feedback">意见反馈</string>
    <string name="item_set">设置</string>
    <string name="item_about">关于版本</string>
    <string name="item_appVersion_desc">本机信息</string>
    <string name="item_check_update_version">检测更新</string>
    <string name="item_sysSetting">系统设置</string>
    <string name="version_RollBack">版本回退</string>
    <string name="version_desc">版本信息</string>
    <string name="version_sys_desc">系统信息</string>
    <string name="version_update_ing">正在更新中</string>
    <string name="version_download_succeed">获取更新成功</string>
    <string name="version_download_err">获取更新失败</string>
    <string name="version_install_ing">正在安装</string>
    <string name="version_install_succeed">升级成功</string>
    <string name="please_reboot_device">请重启设备</string>
    <string name="hint_account">账号</string>
    <string name="hint_psw">密码</string>
    <string name="send_msg">发消息</string>
    <string name="del_msg">清空消息</string>
    <string name="half_duplex">对讲</string>
    <string name="group_announcement">群公告</string>
</resources>