<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/t_bgColor"
    android:id="@+id/view_ScrollView"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/viewUpdateApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen5dp"
            android:gravity="center"
            android:layout_marginLeft="@dimen/dimen_boundary_s"
            android:layout_marginTop="@dimen/dimen2dp"
            android:textColor="@drawable/font_gray_yellows"
            android:textSize="@dimen/textSize_nroml"
            android:visibility="visible"
            android:text="@string/item_check_update_version"
            >
        </TextView>
        <ImageView
            android:id="@+id/view_login_logflag"
            android:layout_width="@dimen/login_logSize"
            android:layout_height="@dimen/login_logSize"
            android:src="@mipmap/ic_logo_gw_w"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_boundary_xl"
            />
        <TextView
            android:id="@+id/view_login_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/textSize_large"
            android:layout_marginTop="@dimen/dimen_boundary_s"
            android:layout_gravity="center"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="@dimen/dimen_boundary_s"
            android:layout_marginRight="@dimen/dimen_boundary_s"
            android:layout_marginTop="@dimen/login_terminal_inputGroup_marTop"
            >
            <ImageView
                android:layout_width="@dimen/login_inputFlag_w"
                android:layout_height="@dimen/login_inputFlag_h"
                android:src="@mipmap/ic_login_author"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen4dp"
                />
            <EditText

                android:id="@+id/view_input_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/login_inputContent_paddingLeft"
                android:textSize="@dimen/textSize_nroml"
                android:textColor="@color/textColorWhite"
                android:textColorHint="@color/textColorHint"
                android:background="@null"
                android:drawableBottom="@drawable/line_black1"
                android:hint="@string/hint_account"
                android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                />
            <ImageView
                android:id="@+id/view_clear_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_search_clear_normal"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="@dimen/dimen_boundary_s"
            android:layout_marginRight="@dimen/dimen_boundary_s"
            >
            <ImageView
                android:layout_width="@dimen/login_inputFlag_w"
                android:layout_height="@dimen/login_inputFlag_h"
                android:src="@mipmap/ic_login_lock"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen4dp"
                />
            <EditText

                android:id="@+id/view_input_psw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/textSize_nroml"
                android:textColor="@color/textColorWhite"
                android:textColorHint="@color/textColorHint"
                android:background="@null"
                android:drawableBottom="@drawable/line_black1"
                android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/login_inputContent_paddingLeft"
                android:hint="@string/hint_psw"
                />
            <ImageView
                android:id="@+id/view_clear_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_search_clear_normal"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/view_code_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="@dimen/dimen_boundary_xl"
            android:layout_marginRight="@dimen/dimen_boundary_xl"
            android:layout_marginTop="@dimen/dimen1dp"
            android:visibility="gone"
            >
            <EditText
                android:id="@+id/view_input_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/textSize_nroml"
                android:textColor="@color/textColorWhite"
                android:textColorHint="@color/textColorHint"
                android:background="@null"
                android:drawableBottom="@drawable/line_black1"
                android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_weight="1"
                android:layout_margin="1px"
                android:inputType="text"
                android:maxLength="4"
                />
            <ImageView
                android:id="@+id/view_code_imgview"
                android:layout_width="@dimen/login_code_w"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen8dp"
                android:layout_marginLeft="@dimen/dimen15dp"
                android:background="@drawable/shape_black_radius"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/view_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="@dimen/dimen_boundary_xl"
            android:layout_marginRight="@dimen/dimen_boundary_xl"
            android:gravity="center"
            android:textSize="@dimen/textSize_large"
            android:textColor="@drawable/font_white_gray"
            android:background="@drawable/login_button"
            android:text="@string/btn_login"
            android:layout_marginTop="@dimen/login_terminal_login_btn_marTop"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen15dp"
            android:visibility="gone"
            >
            <CheckBox
                android:id="@+id/view_userAgreement_checkbos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:checked="false"
                android:button="@null"
                android:background="@drawable/checkbox_yellows"
                />
            <TextView
                android:id="@+id/view_userAgreement_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dimen_boundary_xl"
                android:text="@string/user_agreement"
                android:layout_marginLeft="5dp"
                android:layout_gravity="right"
                android:gravity="center"
                android:paddingRight="@dimen/dimen10dp"
                android:textColor="@drawable/font_gray_yellows"
                android:textSize="@dimen/textSize_samll"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen30dp"/>
        <TextView
            android:id="@+id/view_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen20dp"
            android:textColor="@drawable/font_gray_yellows"
            android:textSize="@dimen/textSize_samll"
            />
    </LinearLayout>
</ScrollView>
